# sqf-vm

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  clang-format.sh
src/: filesystem.cpp  parsesqf.cpp  stringdata.cpp  stringdata.h  virtualmachine.cpp  virtualmachine.h
src/commands/: unimplementedcmds.cpp
